--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,21 +25,28 @@ TABLE OF CONTENTS:
 
 /* # Assets --------------------------------------------------*/
 
-@import "_color-variables";
+@import "_colors";
+@import "_fonts";
 
 /* # Base Rules ----------------------------------------------*/
 
 body {
-  font-family: "Apple SD Gothic Neo", "Malgun Gothic", "Nanum Gothic", Dotum, sans-serif;
   color: $muriel-gray-700;
+  font-family: $font-body;
 }
 
 a {
   color: $muriel-blue-500;
+  font-family: $font-body;
 }
 
 a:focus, a:hover {
   color: $muriel-blue-600;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $font-header;
+  margin: 0;
 }
 
 .row {
@@ -88,7 +95,14 @@ section {
   padding: 1em;
 }
 
+section header {
+  background: $muriel-gray-50;
+  max-width: 1200px;
+  margin: auto;
+}
+
 section article {
+  background: $muriel-gray-50;
   max-width: 1200px;
   margin: auto;
 }
@@ -110,5 +124,28 @@ footer {
 /* # State Rules ---------------------------------------------*/
 
 /* # Theme Rules ---------------------------------------------*/
+
+.nav ul	{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav ul li	{
+  display: inline-block;
+  padding: 0 6px 0 0;
+}
+
+.nav ul li:before {
+  content: "\00b7";
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.nav ul li:first-child:before,
+.nav .children li:before {
+  content: "";
+  display: none;
+}
 
 /* # Changing State ------------------------------------------*/
